<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage_user"
            android:icon="@drawable/ic_manage_user_icon"
            android:title="@string/menu_activity" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_notification_icon"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_send_email"
            android:icon="@drawable/ic_email"
            android:title="@string/menu_edit_data" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_icon_chat"
            android:title="@string/menu_send_email" />

    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_system_icon"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
